All images switched to jpg from png for faster load times. Minor grammar changes.

--- a/_posts/2019-05-15-6.141-Robotics-Science-and-Systems.md
+++ b/_posts/2019-05-15-6.141-Robotics-Science-and-Systems.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "6.141 - Robotics, Science and Systems"
-image: "/assets/images/car.png"
+image: "/assets/images/car.jpg"
 date: 2019-05-15
 ---
 
