--- a/_posts/2018-12-23-8.13-Physics-Junior-Lab.md
+++ b/_posts/2018-12-23-8.13-Physics-Junior-Lab.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "8.13 - Physics Junior Lab"
-image: "/assets/images/jlab.png"
+image: "/assets/images/jlab.jpg"
 date: 2018-12-23
 ---
 
